--- a/style.css
+++ b/style.css
@@ -4,5 +4,26 @@
     background-color: aqua;
     border-radius: 30px;
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+.buttons-window {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.modal-window {
+    text-align: center;
+}
+.button-red {
+    width: 120px;
 }
