--- a/style.css
+++ b/style.css
@@ -26,4 +26,17 @@ body {
 }
 .button-red {
     width: 120px;
+    height: 25px;
+    border: none;
+    border-radius: 10px;
+    color: aliceblue;
+    background-color: red;
+}
+.button-green {
+    width: 120px;
+    height: 25px;
+    border: none;
+    border-radius: 10px;
+    color: aliceblue;
+    background-color: green;
 }
